# sdmx-mcp-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_NOTES.md  app_context.py  config.py  main.py  main_server.py  pyproject.toml  pytest.ini  requirements.txt  sdmx_client.py  sdmx_progressive_client.py  sdmx_query_builder.py  session_manager.py  test_server.py  utils.py
models/: __init__.py  schemas.py  sdmx_types.py
prompts/: sdmx_prompts.py
resources/: sdmx_resources.py
src/sdmx_mcp_gateway/: __init__.py  __main__.py  server.py
tests/: conftest.py
tests/e2e/: test_live_api.py  test_multiendpoint_smoke.py  test_multiendpoint_smoke_extended.py
tests/fixtures/: constraint_response.xml
tests/integration/: test_cross_endpoint_tools.py  test_mcp_tools.py  test_probing_tools.py
tests/scripts/: test_availability.py  test_availability_simple.py  test_build_queries.py  test_dataflows.py  test_detailed_constraints.py  test_mcp_availability.py  test_structure_diagram.py  test_time_period_fix.py  test_version_caching.py
tests/unit/: test_mismatch_hint.py  test_probing.py  test_resolve_client.py  test_sdmx_client.py  test_session_pool.py  test_structure_diagram.py  test_utils.py
tools/: developer_tools.py  endpoint_tools.py  probing_tools.py  sdmx_tools.py
